--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "leaflet": "^1.9.4",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.534.0",
     "mapbox-gl": "^3.14.0",
     "next": "^15.4.5",
     "next-auth": "^4.24.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0",
     "react-map-gl": "^8.0.4",
     "react-router-dom": "^7.7.1",
     "zod": "^4.0.14"
@@ -28,6 +31,7 @@
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@tailwindcss/vite": "^4.1.11",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/mapbox-gl": "^3.4.1",
     "@types/node": "24.1.0",
     "@types/react": "^19.1.8",
