--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@heroicons/react": "^2.2.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.534.0",
@@ -22,6 +26,7 @@
     "next": "^15.4.5",
     "next-auth": "^4.24.11",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.1",
     "react-leaflet": "^5.0.0",
     "react-map-gl": "^8.0.4",
