--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/leaflet": "^1.9.20",
     "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
